--- a/JumpToPython1장-파이썬이란(+내필기작성법).ipynb
+++ b/JumpToPython1장-파이썬이란(+내필기작성법).ipynb
@@ -13,7 +13,10 @@
     "- 질문 : 제목2, 질문에 Q 답에는 A, 아직 답 못찾은 애는 ㅇㅇㅇㅇㅇ로 미완 표기\n",
     "## <font color=green> Q. 질문 </font> \n",
     "- 나만의 주의 포인트, 내가 자주 실수하는 부분 : 제목2 빨간색\n",
-    "## <font color=red> 요거요거 주의하자! </font> "
+    "## <font color=red> 요거요거 주의하자! </font>\n",
+    "- 혼자 해보는 실험\n",
+    "\n",
+    "**<font color=blue> 실험 : ㅇㅇㅇ은 어떻게 될까? </font>**"
    ]
   },
   {
@@ -63,62 +66,6 @@
     "#### ㅇ 그냥 드래그해서 마크다운으로 넣음\n",
     "![nature-g72c7aa8a1_640.jpg](attachment:nature-g72c7aa8a1_640.jpg)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
