--- a/JumpToPython2장(1)-숫자형,문자형.ipynb
+++ b/JumpToPython2장(1)-숫자형,문자형.ipynb
@@ -768,8 +768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=green> Q. 만약 꼬이면 어떻게 될까? </font>\n",
-    "## <font color=green> A. 오류 나는 게 아니라 슬라이싱 되는 게 아무것도 없는 것! 길이도 0</font>"
+    "**<font color=blue> 실험 : 만약 꼬이면 어떻게 될까? </font>**"
    ]
   },
   {
@@ -819,7 +818,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -840,7 +839,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -855,6 +856,13 @@
    ],
    "source": [
     "len(a[5:2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color=blue> 답 : 오류 나는 게 아니라 슬라이싱 되는 게 아무것도 없는 것! 길이도 0 </font>**"
    ]
   },
   {
@@ -1679,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -1690,7 +1698,7 @@
        "'f접두사 포매팅 소수 3.4359'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1719,7 @@
        "'f접두사 포매팅 소수     3.4359'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1749,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-79-6b3053258b26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 아냐 ... ! 위치가 : 와 ^12 사이에 있어야지\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;34m'{0:^!12}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-66-6b3053258b26>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 아냐 ... ! 위치가 : 와 ^12 사이에 있어야지\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"python\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;34m'{0:^!12}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: Invalid format specifier"
      ]
     }
@@ -1755,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1772,7 @@
        "'!!!python!!!'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1792,7 @@
        "'!!!python!!!'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1842,7 @@
        "2"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1863,7 @@
        "14"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1884,7 @@
        "-1"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1904,7 @@
        "14"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1925,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-86-752fe4c94fba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'k'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-73-752fe4c94fba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'k'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m: substring not found"
      ]
     }
@@ -1928,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1945,7 @@
        "'a-join-b-join-c-join-d'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1967,7 @@
        "'HI'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1987,7 @@
        "'hi'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +2007,7 @@
        "'k 를 k 로 replkce 해보자'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2028,7 @@
        "['공백을', '기준으로', '문자열', '나누기']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,6 +2037,34 @@
     "test5 = '공백을 기준으로 문자열 나누기'\n",
     "test5.split()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
