--- a/JumpToPython4장.ipynb
+++ b/JumpToPython4장.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 함수\n",
+    "# 1. 함수\n",
     "- 매개변수 parameter : 함수에 입력으로 전달된 값을 받는 변수\n",
     "- 인수 arguments : 함수를 호출할 때 전달하는 입력값\n",
     "- 입력값 유/무 * 결괏값(반환값) 유/무 => 총 4가지 "
@@ -798,32 +798,327 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###  <font color=magenta>8월 19일</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 사용자의 입력과 출력"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 입력\n",
+    "- input(\"질문\") : \"질문\"이 안내문구로 뜨고 사용자가 입력한 값이 input()함수의 리턴값으로 나온다"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사용자가 입력한 키워드\n",
+      "사용자가 입력한 키워드\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# input은 입력되는 모든 것을 문자열로 취급\n",
+    "\n",
+    "num = input(\"숫자를 입력하세요\")\n",
+    "type(num)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요23\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = int(input(\"숫자를 입력하세요\"))\n",
+    "type(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lifeistoo short\n",
+      "lifeistoo short\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 큰따옴표로 둘러싸인 문자열은 + 연산과 동일하다.\n",
+    "\n",
+    "print(\"life\" \"is\" \"too short\")\n",
+    "print(\"life\" + \"is\" + \"too short\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color=blue> 실험 : 작은 따옴표, 컴마 넣기 등 다른 패턴들은? </font>**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lifeistoo short\n",
+      "life is too short\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 작은 따옴표\n",
+    "print('life' + 'is' + 'too short')\n",
+    "\n",
+    "# 컴마 넣기\n",
+    "print(\"life\", \"is\", \"too short\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font color=blue> 답 : 작은 따옴표는 똑같고, 컴마는 띄어쓰기 해줘서 다름 </font>**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "life is too short\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열 띄어쓰기는 콤마로 한다 (바로 다음에 나오는군ㅋㅋㅋ)\n",
+    "\n",
+    "print(\"life\", \"is\", \"too short\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "# 한 줄에 결괏값 출력하기 - 매개변수 end를 사용해 끝 문자 지정 가능 - 기본값이 줄바꿈\n",
+    "\n",
+    "for i in range(10) :\n",
+    "    print(i, end = ' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 지금까지는 사용자가 값을 직접 '입력', 모니터 화면에 결괏값을 '출력'\n",
+    "- 이제는 파일을 통한 입출력 방법을 알아보자"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 파일 읽고 쓰기\n",
+    "- 파일 새로 만들기\n",
+    "- 프로그램이 만든 결괏값을 새 파일에 적기\n",
+    "- 파일에 적은 내용 읽기\n",
+    "- 새로은 내용 추가"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 파일 생성하기\n",
+    "- 파일 객체 = open(파일 이름, 파일 열기 모드)\n",
+    "- 파일 열기 모드 3가지\n",
+    "    - r : 읽기 모드\n",
+    "    - w : 쓰기 모드 => 해당 파일 이미 존재하면 원래 있던 내용 사라져, 해당 파일 없으면 새로운 파일 생성\n",
+    "    - a : 추가 모드 (파일의 마지막에 새로운 내용을 추가할 때 사용)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = open(\"새파일.txt\", 'w')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-11-2c3a58d9d4fa>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-2c3a58d9d4fa>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    f = open(\"C:\\Users\\owner\\StepByStep/새파일2.txt\", 'w')\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 디렉토리 설정\n",
+    "# 지금 경우는 파일탐색기에 있는 디렉토리를 복사해다 사용함 (그래서 슬래시(/)대신 역슬래시(\\)가 붙어있음)\n",
+    "# 그대로 사용했더니 신텍스 오류가 남 - 이스케이프 코드라서 디코딩 안 된다??\n",
+    "\n",
+    "f = open(\"C:\\Users\\owner\\StepByStep/새파일2.txt\", 'w')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"C:/Users/owner/StepByStep/새파일2.txt\", 'w')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 객체 닫기\n",
+    "- close()\n",
+    "- 생략해도 되긴 함 (프로그램 종료 시 파이썬 프로그램이 열려 있는 파일의 객체 자동으로 닫아주기 때문에)\n",
+    "- 하지만 close()를 사용해서 열려 있는 파일을 직접 닫아 주는 것이 좋아 <br>\n",
+    "(쓰기 모드로 열었던 파일을 닫지 않고 다시 사용하려고 하면 오류가 발생하기 때문에)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 쓰기모드로 열고, 출력값 적기\n",
+    "- write(적을 것)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"새파일.txt\", 'w')\n",
+    "for i in range(1, 11) : \n",
+    "    data = \"{}번째 줄입니다.\\n\".format(i)\n",
+    "    f.write(data)\n",
+    "f.close()\n",
+    "\n",
+    "# 앞에서 언급했듯이 w는 원래 파일이 있다면 그걸 삭제하고 새로 만들기 때문에\n",
+    "# 이 줄을 (어떻게 부르는지 찾아보자) 여러 번 실행해도 같은 결과물 그대로 나와 (누적되는 게 아니라)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 외부에 저장된 파일 읽기\n",
+    "- readline \n",
+    "- readlines \n",
+    "- read "
+   ]
   },
   {
    "cell_type": "code",
